# mse-dbms-fat

./: .dockerignore  .gitignore  Dockerfile.dashboard  Dockerfile.init  README.md  docker-compose.wsl.yml  docker-compose.yml  pyproject.toml
docs/: data_flow.drawio  instructions.md  technical_report.md
src/: analytics_integration.py  dashboard.py  dataset_generator.py  hbase_queries.py  mongodb_queries.py  seed_databases.py  spark_processing.py  visualizations.py
