[project]
name = "myproject"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
	"numpy",
	"pandas",
	"scipy",
	"matplotlib",
	"scikit-learn",
	"jupyterlab",
	"seaborn",
	"faker>=40.8.0",
	"pyspark>=4.1.1",
	"pymongo>=4.16.0",
	"happybase>=1.3.0",
	"streamlit>=1.55.0",
	"plotly>=6.6.0",
]
